--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,8 +99,6 @@ textarea {
 /*}*/
 .experienced{
     color: #ffffff;
-    font-size: 20px;
-    font-weight: bold;
 }
 .phone_contact{
     border-radius: 5px 72px 30px;
@@ -130,6 +128,10 @@ textarea {
         -webkit-transform: scale(1.1);
         transform: scale(1.1);
     }
+}
+.phone_header{
+    color: #ffffff;
+    font-size: 24px;
 }
 
 .pulse-grow {
@@ -260,16 +262,18 @@ textarea {
 }
 
 /*contact-us form*/
-.input_name, .input_email,.input_phone, .input_details{
+.input_name, .input_email,.input_phone{
     background: #001321;
     color: #ffffff;
     height: 35px;
+    margin-bottom: 4px;
 }
 .form_submit{
     width: 100%;
+    height: 40px;
     margin: 2px 0px;
     background: #001321;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 /*feedback form*/
@@ -312,7 +316,9 @@ textarea {
 .feedback .status{
     font-size:16px;
 }
-
+.question_img{
+    margin-top: 10px;
+}
 /*homepage carasaul bootstrap*/
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
