form validation, testimonial crud operation is done

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -445,6 +445,9 @@ textarea {
     .carousel-caption .btn {
         font-size: 18px;
     }
+    .container{
+        margin-top: 32%;
+    }
 
 
     /*responsive for header*/
