--- a/public/css/css_header/style.css
+++ b/public/css/css_header/style.css
@@ -3612,7 +3612,7 @@ form a,form a:before,form a:after {
 
 #NavZone {
     width: 100%;
-    background: url(/img/img_header/BG-topnav.jpg);
+    background: url('./img/img_header/BG-topnav.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
