--- a/public/css/meet_our_att.css
+++ b/public/css/meet_our_att.css
@@ -507,12 +507,12 @@ html.no-boxsizing #AttyCarousel ul li.selected {
 
 .PracticeList li > a {
     display: block;
-    background-color: #d8e3f6;
+    background-color: #1B8FE0;
     border: 1px solid #bdc9dd;
     margin: 0 0 4px;
     box-shadow: 0 2px 0 rgba(0,0,0,.1), inset 0 1px 0 rgba(255,255,255,.75);
     padding: 10px 0;
-    color: #005695; /* $primary */
+    color: #ffffff; /* $primary */
     text-transform: uppercase;
     -webkit-transition: .5s ease;
     -moz-transition: .5s ease;
@@ -521,7 +521,7 @@ html.no-boxsizing #AttyCarousel ul li.selected {
 }
 
 .PracticeList li.active > a {
-    background-color: #217C9C; /* $primary */
+    background-color: dimgray; /* $primary */
     color: #fff;
 }
 
