--- a/public/css/meet_our_att.css
+++ b/public/css/meet_our_att.css
@@ -474,7 +474,7 @@ html.no-boxsizing #AttyCarousel ul li.selected {
 }
 
 #AttyCarousel .AttyInfo a:hover {
-    background-color: #217C9C; /* $secondary */
+    background-color: #3685BE; /* $secondary */
 }
 /* End Attorney Carousel */
 
