--- a/public/css/main.css
+++ b/public/css/main.css
@@ -265,18 +265,36 @@ textarea {
 }
 
 /*contact-us form*/
-.input_name, .input_email,.input_phone{
-    background: #001321;
-    color: #ffffff;
-    height: 35px;
-    margin-bottom: 4px;
+.contact_input_form{
+    width: 65%;
 }
 .form_submit{
-    width: 100%;
-    height: 40px;
+    width: 65%;
     margin: 2px 0px;
-    background: #001321;
+    background: #1C8FE0;
     font-size: 20px;
+    color: #ffffff;
+}
+.any_questions p{
+    text-align: center;
+    font-size: 2.5em;
+    color: #ffffff;
+    font-family: Georgia, serif;;
+}
+.any_questions p:nth-child(2){
+    font-size: 1.3em;
+}
+.any_questions p:nth-child(2) span{
+    font-weight: bold;
+    font-style: italic;
+}
+.any_questions p:nth-child(3){
+    font-size: 1.2em;
+}
+.contact_form_details{
+    background: #1C8FE0;
+    border-bottom: 5px solid gray;
+    border-top: 5px solid gray;
 }
 
 /*feedback form*/
