--- a/public/css/main.css
+++ b/public/css/main.css
@@ -287,6 +287,7 @@ textarea {
 .any_questions p:nth-child(2) span{
     font-weight: bold;
     font-style: italic;
+    color: #000000;
 }
 .any_questions p:nth-child(3){
     font-size: 1.2em;
