--- a/public/css/meet_our_att_responsive.css
+++ b/public/css/meet_our_att_responsive.css
@@ -1248,6 +1248,7 @@ img {
     #HomeTestimonial h2 {
         font-size: 30px;
         padding: 0px 2%;
+        margin-top: -55px;
     }
 
     form #LBanners .Info h1 {
