--- a/public/css/css_header/responsive.css
+++ b/public/css/css_header/responsive.css
@@ -1644,3 +1644,12 @@ html.no-canvas .our-work .mpreview img {
         transform: scale(0.35);
     }
 }
+@media (max-height: 1263px) and (min-width:1150px) {
+    .masthead .Number a{font-size: 28px;}
+    .masthead div.navsection {
+        width: 70%;
+    }
+}
+@media (min-width: 1264px) {
+    .masthead .Number a{font-size: 30px;}
+}
