--- a/public/css/css_header/style.css
+++ b/public/css/css_header/style.css
@@ -335,7 +335,7 @@ a.named-anchor {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url(../img_header/img/toplogobg2.png);
+    /*background-image: url(../img_header/img/toplogobg2.png);*/
     left: 0%;
     background-repeat: no-repeat;
     background-position: right top;
@@ -643,7 +643,7 @@ body.animateleft .masthead .Contact {
 }
 
 .masthead div.navsection {
-    width: 73%;
+    width: 72%;
     float: left;
     -webkit-transition: 0.2s ease;
     -moz-transition: 0.2s ease;
@@ -4311,19 +4311,19 @@ div.imenuitem {
     display: none;
 }
 
-div.imenuitem.iright:before {
-    content: '\e0ea';
-    font-family: 'icomoon-ult';
-    font-style: normal;
-    font-weight: normal;
-    text-transform: none;
-    line-height: 1;
-    float: right;
-    font-size: 20px;
-    color: #fff;
-    line-height: 41px;
-    padding-left: 25%;
-}
+/*div.imenuitem.iright:before {*/
+    /*content: '\e0ea';*/
+    /*font-family: 'icomoon-ult';*/
+    /*font-style: normal;*/
+    /*font-weight: normal;*/
+    /*text-transform: none;*/
+    /*line-height: 1;*/
+    /*float: right;*/
+    /*font-size: 20px;*/
+    /*color: #fff;*/
+    /*line-height: 41px;*/
+    /*padding-left: 25%;*/
+/*}*/
 
 div.imenuitem a {
     color: #fff;
