--- a/public/css/css_header/style.css
+++ b/public/css/css_header/style.css
@@ -323,11 +323,13 @@ a.named-anchor {
     z-index: 2;
     position: absolute;
     top: 0px;
-    width: 5px;
-    height: 236px;
+    /*width: 5px;*/
+    /*height: 236px;*/
+    width:322px;
+    height:103px;
     max-width: 549px;
     max-height: 236px;
-    left: -164px;
+    /*left: -164px;*/
 }
 
 .TopLogo .logobg {
@@ -377,11 +379,11 @@ a.named-anchor {
 .TopLogo .logo-image {
     max-width: 100%;
     position: absolute;
-    left: 30%;
-    top: -5%;
-    width: 64%;
+    /*left: 30%;*/
+    top: 12%;
+    width: 100%;
     height: 60%;
-    overflow: hidden;
+    /*overflow: hidden;*/
     background-repeat: no-repeat;
     background-position: center center;
     -webkit-transition: all ease .5s;
@@ -418,7 +420,9 @@ a.named-anchor {
 }
 
 .Scrolled .logo-image {
-    width: 47%;
+    /*width: 47%;*/
+    width:96%;
+    height:28%;
 }
 
 .masthead {
@@ -643,13 +647,14 @@ body.animateleft .masthead .Contact {
 }
 
 .masthead div.navsection {
-    width: 72%;
+    width: 62%;
     float: left;
     -webkit-transition: 0.2s ease;
     -moz-transition: 0.2s ease;
     -o-transition: 0.2s ease;
     transition: 0.2s ease;
-    margin-left: 175px;
+    /*margin-left: 175px;*/
+    margin-left: 301px;
     height: 100%;
 }
 
