changes in style css

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -594,6 +594,7 @@ textarea {
     .container_section{
         margin-top: 90px;
     }
+    .masthead .Number a{margin-right: 100px;}
     .container_section_second h2{ color: black;}
     .common_questions{ margin-top: 22%;}
     .common_questions h2{color:#1B8FE0; font-size: 25px;}
@@ -604,6 +605,7 @@ textarea {
     #BottomInfo a.phonelink {
         font-size: 10px;
     }
+
 }
 
 
