changed to absolute path for back img

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -351,6 +351,17 @@ textarea {
 
 /*homepage carasaul bootstrap*/
 
+
+
+/*legal_services*/
+.legal_services{
+    margin-top: 8%;
+}
+/*legal_services ends*/
+
+
+
+
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 /* Carousel base class */
