--- a/public/css/main.css
+++ b/public/css/main.css
@@ -444,15 +444,17 @@ textarea {
 
     .verdict_recent p, .news_recent p{
         text-align: justify;
-        font-size: 18px;
+        font-size: 20px;
         width: 100%;
-        max-height: 80px;
-        overflow: scroll;
-        background: #1F90E0;
-        color:#ffffff;
+        color: #1F90E0;
         padding: 10px;
-        border: 3px solid gray;
         font-family: Montserrat, Arial, "Helvetica Neue", Helvetica, sans-serif;
+    }
+    p.verdict_desc{
+        font-size: 15px;
+        max-height: 200px;
+        overflow: scroll;
+        color: #000000;
     }
 /*Personal Injury*/
 .personal_sidebar{
