--- a/public/css/css_header/style.css
+++ b/public/css/css_header/style.css
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-    color: #3785BF; /* $Primary */
+    /*color: #3785BF; *//* $Primary */
     font-size: 18px;
 }
 
@@ -43,7 +43,8 @@ h2 {
 }
 
 h3 {
-    color: #777777;
+    color: #646464;
+    font-size: 15px;
 }
 
 strong {
@@ -746,7 +747,7 @@ html.no-display-table .top-nav ul li a {
 
 #Flyout {
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     padding: 0;
     top: 0px;
     position: relative;
