changes in victory page UI

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -472,7 +472,7 @@ textarea {
 /*Personal Injury Ends*/
 
 /*family law*/
-.container_section h1{margin-bottom: 10px;}
+.container_section h1{margin-bottom: 10px; font-size: 40px;}
 .container_section p{margin-bottom: 10px;}
 /*family law page ends*/
 /*Victory Page*/
