--- a/public/css/css_header/style.css
+++ b/public/css/css_header/style.css
@@ -422,8 +422,9 @@ a.named-anchor {
 
 .Scrolled .logo-image {
     /*width: 47%;*/
-    width:96%;
-    height:28%;
+    width:98%;
+    height:41%;
+    margin-top: -10px;
 }
 
 .masthead {
