--- a/public/css/meet_our_att_responsive.css
+++ b/public/css/meet_our_att_responsive.css
@@ -737,6 +737,7 @@ img {
     .TopLogo {
         width: 45%;
         padding-bottom: 8px;
+        margin-left: -16px;
     }
 
     .PhoneInfo a {
